[gd_scene load_steps=10 format=2]

[ext_resource path="res://RECURSOS/IMAGENES/PLAYER/HojaSpriteDelPersonaje.png" type="Texture" id=1]
[ext_resource path="res://SISTEMA/GUI/Mensaje Toma de Decisiones/Mensaje.gd" type="Script" id=2]
[ext_resource path="res://RECURSOS/FONTS/my-standard.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://SISTEMA/GUI/Mensaje Toma de Decisiones/MensajeTomarDecisiones.gd" type="Script" id=4]
[ext_resource path="res://RECURSOS/SHADERS/FondoDesenfocado.tres" type="Material" id=5]

[sub_resource type="DynamicFont" id=5]
size = 40
extra_spacing_char = 5
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.145098, 0.145098, 0.164706, 1 )

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Mensaje:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.1, 0.1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "aparecer"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Mensaje:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.1, 0.1 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "esta_listo" ],
"method": "emit_signal"
} ]
}

[node name="MensajeTomarDecisiones" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="TextureRect" type="ColorRect" parent="."]
visible = false
material = ExtResource( 5 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Mensaje" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -710.0
margin_top = -242.0
margin_right = 710.0
margin_bottom = 242.0
rect_scale = Vector2( 0.1, 0.1 )
rect_pivot_offset = Vector2( 710, 242 )

[node name="Mensaje" type="TextEdit" parent="Mensaje"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = -212.0
margin_right = 672.0
margin_bottom = 100.0
custom_colors/font_color_readonly = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 5 )
custom_styles/read_only = SubResource( 6 )
text = "felicitaciones, ha ganado!
asdasd
asdasdsdsdsdsdddddsdsdddsasd
sdsdsd
sdsds
sdsd
"
readonly = true
context_menu_enabled = false
shortcut_keys_enabled = false
virtual_keyboard_enabled = false
middle_mouse_paste_enabled = false
selecting_enabled = false
smooth_scrolling = true
wrap_enabled = true
script = ExtResource( 2 )

[node name="Imagen" type="Sprite" parent="Mensaje"]
position = Vector2( 206, 238 )
scale = Vector2( 9.5, 12.5 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 0, 32, 32 )

[node name="HBoxContenedorBotones" type="HBoxContainer" parent="Mensaje"]
margin_left = 390.0
margin_top = 374.0
margin_right = 1394.0
margin_bottom = 450.0
custom_constants/separation = 150
alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 4 )
anims/aparecer = SubResource( 3 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
